--- a/docroot/themes/custom/site/templates/menu/block--system-menu-block--main.html.twig
+++ b/docroot/themes/custom/site/templates/menu/block--system-menu-block--main.html.twig
@@ -34,7 +34,7 @@
  */
 #}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<nav  role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes.removeClass('clearfix')|without('role', 'aria-labelledby').addClass('navbar navbar-default hidden-xs') }} >
+<nav  role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes.removeClass('clearfix')|without('role', 'aria-labelledby').addClass('navbar navbar-default hidden-xs hidden-sm') }} >
   {% block content %}
     {{ content }}
   {% endblock %}
