Remove not-needed vendors

--- a/docroot/themes/custom/site/src/styles/_vendor.scss
+++ b/docroot/themes/custom/site/src/styles/_vendor.scss
@@ -13,12 +13,12 @@
 @import "../../node_modules/typography-breakpoints-justification/scss/typography-breakpoints-justification";
 @import "../../node_modules/sectioned/scss/sectioned";
 @import "../../node_modules/boxy-concept/scss/boxy";
-@import "../../node_modules/flexy-layout/scss/flexy-layout";
-@import "../../node_modules/flexy-navigation/styles/scss/flexy-navigation";
-@import "../../node_modules/flexy-header/styles/scss/flexy-header";
-@import "../../node_modules/pace-bootstrap-theme/scss/pace-bootstrap-theme";
-@import "../../node_modules/sidr-bootstrap-theme/scss/sidr-bootstrap-theme";
-@import "../../node_modules/slinky-bootstrap-theme/scss/slinky-bootstrap-theme";
-@import "../../node_modules/flexy-row/scss/flexy-row";
-@import "../../node_modules/flexy-list/scss/flexy-list";
+//@import "../../node_modules/flexy-layout/scss/flexy-layout";
+//@import "../../node_modules/flexy-navigation/styles/scss/flexy-navigation";
+//@import "../../node_modules/flexy-header/styles/scss/flexy-header";
+//@import "../../node_modules/pace-bootstrap-theme/scss/pace-bootstrap-theme";
+//@import "../../node_modules/sidr-bootstrap-theme/scss/sidr-bootstrap-theme";
+//@import "../../node_modules/slinky-bootstrap-theme/scss/slinky-bootstrap-theme";
+//@import "../../node_modules/flexy-row/scss/flexy-row";
+//@import "../../node_modules/flexy-list/scss/flexy-list";
 @import "../../node_modules/element-wrapper-link/scss/element-wrapper-link";
