--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_loader.scss
@@ -10,6 +10,4 @@
 @import "quote";
 @import "employee";
 @import "ordered-course-slot";
-
-// Files below needs to be cleaned up
-@import "_paragraph-type-teacher-class-description";
+@import "class-description";
