--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_class-description.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_class-description.scss
@@ -23,6 +23,7 @@ $lg-paragraph-action-heading-margin-bottom: 20px;
 .paragraph--type--vih-teacher-class-description {
 
   .field--name-field-photo {
+    margin-right: 0 - floor( ( $grid-gutter-width / 2 ) );
 
     img {
       width: 100%;
@@ -45,7 +46,7 @@ $lg-paragraph-action-heading-margin-bottom: 20px;
     padding: 0;
 
     .content {
-      padding: $boxy-body-spacing-top-bottom $boxy-spacing-left-right;
+      padding: $boxy-body-spacing-top-bottom floor( ( $grid-gutter-width / 2 ) );
     }
   }
 }
