VI-167 - teachers description

--- a/docroot/themes/custom/site/templates/user/full/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/full/user.html.twig
@@ -26,8 +26,8 @@
 
                         <div class="partial">
                             <div class="partial__heading">
-                                <h3 class="partial__heading__title heading-h4">
-                                    {{ 'Courses' | trans }}
+                                <h3 class="partial__heading__title">
+                                    {{ 'Classes' | trans }}
                                 </h3>
                             </div>
                             <div class="partial__body">
