--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-teacher-class-description.html.twig
@@ -24,7 +24,7 @@
                         <div class="boxy__body">
 
                             {% if paragraph.field_photo.value %}
-                                <div class="row">
+                                <div class="row row--equal-height-columns">
                                     <div class="col-xs-12 col-sm-4 col-md-3">
 
                                         {# Begin - photo #}
