--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -89,6 +89,9 @@ view_mode ? view_mode|clean_class,
                                                     <div class="time-period__list__item">
                                                         {{ content.field_event_start_date }}
                                                     </div>
+                                                    <div class="time-period__list__item">
+                                                        {{ content.field_event_end_date }}
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
