--- a/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/embedded/paragraph--vih-ordered-course-person--embedded.html.twig
@@ -13,7 +13,7 @@
             {{ paragraph.field_vih_ocp_first_name.value }} {{ paragraph.field_vih_ocp_last_name.value }}
         </h4>
         {# End - name #}
-
+        {{ content.field_vih_ocp_cpr }}
         {# Begin - email #}
         {{ content.field_vih_ocp_email }}
         {# End - email #}
