VI-182 - messy language

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -77,7 +77,7 @@
                 <div class="partial__heading">
                     <h3 class="partial__heading__title heading-h4">
                         <span class="icon icon-account-circle"></span>
-                        {{ 'Personlige oplysninger' | trans }}
+                        {{ 'Personal information' | trans }}
                     </h3>
                 </div>
                 <div class="partial__body">
@@ -113,7 +113,7 @@
                 <div class="partial__heading">
                     <h3 class="partial__heading__title heading-h4">
                         <span class="icon icon-account-circle"></span>
-                        {{ 'Kontaktpolysninger for forælder eller værge' | trans }}
+                        {{ 'Contact information for parents or guardians' | trans }}
                     </h3>
                 </div>
                 <div class="partial__body">
