--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -103,12 +103,12 @@ view_mode ? view_mode|clean_class,
                                     <div class="partial partial--travel">
                                         <div class="partial__heading">
                                             <h3 class="partial__heading__title heading-h4">
-                                                {{ 'Kom ud at rejse' | trans }}
+                                                {{ 'Get travelling' | trans }}
                                             </h3>
                                         </div>
                                         <div class="partial__subheading">
                                             <h3 class="partial__subheading__title heading-h5">
-                                                {{ 'Skæddersy dit ophold paå tværs af fagpakker' | trans }}
+                                                {{ 'Tailor your stay across course packages' | trans }}
                                             </h3>
                                         </div>
                                         <div class="partial__body">
@@ -132,7 +132,7 @@ view_mode ? view_mode|clean_class,
                                         <h3 class="boxy__heading__title heading-h4">{{ 'Course packages' | trans }}</h3>
                                     </div>
                                     <div class="boxy__subheading">
-                                        <h4 class="boxy__subheading__title heading-h5">{{ 'Skæddersy dit ophold på tværs af fagpakker' | trans }}</h4>
+                                        <h4 class="boxy__subheading__title heading-h5">{{ 'Tailor your stay across course packages' | trans }}</h4>
                                     </div>
                                     <div class="boxy__body">
 
@@ -224,7 +224,7 @@ view_mode ? view_mode|clean_class,
                 {# Begin - price #}
                 <div class="partial partial--price-table">
                     <div class="partial__heading">
-                        <h2 class="partial__heading__title heading-h4">{{ 'Prisoversigt' | trans }}</h2>
+                        <h2 class="partial__heading__title heading-h4">{{ 'Price overview' | trans }}</h2>
                     </div>
                     <div class="partial__body">
 
@@ -233,7 +233,7 @@ view_mode ? view_mode|clean_class,
                                 <div class="col-xs-12">
                                     <div class="price-table col-sm-12 col-md-4">
                                         <div class="table-heading">
-                                            {{ "Materialegebyr"|trans }}
+                                            {{ "Material fee"|trans }}
                                         </div>
                                         <div class="table-cell">
                                             {{ content.field_vih_course_price }}
@@ -241,7 +241,7 @@ view_mode ? view_mode|clean_class,
                                     </div>
                                     <div class="price-table col-sm-12 col-md-4">
                                         <div class="table-heading">
-                                            {{ "Tilmeldingsgebyr"|trans }}
+                                            {{ "Signup fee"|trans }}
                                         </div>
                                         <div class="table-cell">
                                             {{ content.field_vih_course_subsc_price }}
@@ -249,7 +249,7 @@ view_mode ? view_mode|clean_class,
                                     </div>
                                     <div class="price-table col-sm-12 col-md-4">
                                         <div class="table-heading">
-                                            {{ "Ugebetaling"|trans }}
+                                            {{ "Weekly payment"|trans }}
                                         </div>
                                         <div class="table-cell">
                                             {{ content.field_vih_course_week_price }}
