--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -20,7 +20,7 @@
         <div class="col-sm-4">
             <div class="text-right">
                 <button type="button" class="btn btn-default" data-toggle="modal" data-target="#class-modal-cp-{{ term.id }}">
-                    {{ 'Se fag' | trans }}
+                    {{ 'Show courses' | trans }}
                 </button>
             </div>
 
@@ -60,7 +60,7 @@
 
                                         <div class="panel-group__heading">
                                             <h4 class="panel-group__heading__title">
-                                                {{ 'Liste over fag i ' | trans }}{{ term.name.value }}
+                                                {{ 'List of courses in ' | trans }}{{ term.name.value }}
                                             </h4>
                                         </div>
 
