--- a/docroot/themes/custom/site/templates/user/compact/user--compact.html.twig
+++ b/docroot/themes/custom/site/templates/user/compact/user--compact.html.twig
@@ -15,7 +15,7 @@
           {{ content|without("field_vih_user_title", "field_vih_user_phone", "field_vih_user_photo", "field_user_name_first", "field_user_name_last") }}
         </td>
         <td class="teacher-contact-info hidden-xs">
-          <h5>{{ "Kontaktoplysninger"|trans }}:</h5>
+          <h5>{{ "Contact information"|trans }}:</h5>
 
           <span class="teacher-phone">
             <span class="icon icon-phone"></span> {{ content.field_vih_user_phone }}
@@ -35,7 +35,7 @@
       </tr>
       <tr class="visible-xs">
         <td class="teacher-contact-info">
-          <h5>{{ "Kontaktoplysninger"|trans }}:</h5>
+          <h5>{{ "Contact information"|trans }}:</h5>
 
           <span class="teacher-phone">
             <span class="icon icon-phone"></span> {{ content.field_vih_user_phone }}
